common-applications/test-environment/mindspore-website-revision/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: mindspore-website-revision
  name: mindspore-website-revision
