common-applications/test-environment/mindspore-website-revision/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: mindspore-website-revision
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: website
  type: ClusterIP
