common-applications/test-environment/mindspore-website-revision/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: mindspore-website-ingress
  namespace: mindspore-website-revision
spec:
  tls:
    - hosts:
      - mindspore-website.test.osinfra.cn
      secretName: mindspore-website-tls
  rules:
    - host: mindspore-website.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: website-service
            servicePort: 8080
          path: /
